@@ -1,6 +1,12 @@
 2007-02-05 Braden McDaniel  <braden@endoframe.com>
 
 	* src/openvrml-xembed/main.cpp
+	(main(int, char *[])): Moved global variables used for option
+	parsing inside main.
+
+2007-02-05 Braden McDaniel  <braden@endoframe.com>
+
+	* src/openvrml-xembed/main.cpp
 	(main(int, char *[])): Dismiss the error_guard when returning from
 	main prematurely (but without a GError).
 
